@@ -8,6 +8,7 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+..F....... [ZBX-3803] added session auto start check in frontend setup (Oleg)
 ..F....... [ZBX-5621] fixed custom trigger severities in user media configuration (Oleg)
 ..F....... [ZBX-5617] fixed class bug in triggers (Oleg)
 A.F....... [ZBX-5046] fixed error message when delete globalmacro if macro doesn't exist (Oleg)
